# NitroCppTest-GeovaniLopesDeBritoJunior

./: CMakeLists.txt  README.md  README.txt  badrectangle.json  main.cpp  rectangle.cpp  rectangle.hpp  rectangles.json
test/: CMakeLists.txt  UnitTest.cpp
